Bug 1194600 - Ensure plugin stream listener's buffer always has room for incoming data. r=jimm, a=ritu